--- a/firebase_proj/src/App.scss
+++ b/firebase_proj/src/App.scss
@@ -55,73 +55,31 @@ a {
   text-decoration: inherit;
 }
 
-
-// btn
-.btn {
-  --tw-text-opacity: 1;
-  --tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, .05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  --tw-bg-opacity: 1;
-  --tw-border-opacity: 1;
-  align-items: center;
-  -webkit-animation: button-pop .25s ease-out;
-  animation: button-pop .25s ease-out;
-  -webkit-animation: button-pop var(--animation-btn, .25s) ease-out;
-  animation: button-pop var(--animation-btn, .25s) ease-out;
-  background-color: oklch(.961151 0 0 / var(--tw-bg-opacity));
-  background-color: oklch(var(--btn-color, var(--b2)) / var(--tw-bg-opacity));
-  border-color: transparent;
-  border-color: oklch(var(--btn-color, var(--b2)) / var(--tw-border-opacity));
-  border-radius: .5rem;
-  border-radius: var(--rounded-btn, .5rem);
-  border-width: 1px;
-  border-width: var(--border-btn, 1px);
-  box-shadow: 0 0 #0000, 0 0 #0000, var(--tw-shadow);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  color: oklch(.278078 .029596 256.847952 / var(--tw-text-opacity));
-  color: var(--fallback-bc, oklch(var(--bc) / var(--tw-text-opacity)));
-  cursor: pointer;
-  display: inline-flex;
-  flex-shrink: 0;
-  flex-wrap: wrap;
-  font-size: .875rem;
-  font-weight: 600;
-  gap: .5rem;
-  height: 3rem;
-  justify-content: center;
-  line-height: 1em;
-  min-height: 3rem;
-  outline-color: oklch(.278078 .029596 256.847952 / 1);
-  outline-color: var(--fallback-bc, oklch(var(--bc) / 1));
-  padding-left: 1rem;
-  padding-right: 1rem;
-  text-align: center;
-  text-decoration-line: none;
-  transition-duration: .2s;
-  transition-property: color, background-color, border-color, opacity, box-shadow, -webkit-transform;
-  transition-property: color, background-color, border-color, opacity, box-shadow, transform;
-  transition-property: color, background-color, border-color, opacity, box-shadow, transform, -webkit-transform;
-  transition-timing-function: cubic-bezier(0, 0, .2, 1);
-  -webkit-user-select: none;
-  user-select: none;
+.justify-between {
+  justify-content: space-between;
 }
 
-.btn-ghost {
-  border-width: 1px;
-  border-color: transparent;
-  background-color: transparent;
-  color: currentColor;
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  outline-color: currentColor;
+.w-11\.5 {
+  width: 2.875rem;
 }
 
-.btn-circle {
-  border-radius: 9999px;
-  height: 3rem;
-  padding: 0;
-  width: 3rem;
+.h-11\.5 {
+  height: 2.875rem;
+}
+
+// OVERRIDE SVG
+.card-icon svg {
+  fill: #3c50e0;
+  width: 22px;
+  height: 22px;
+}
+
+.fill-orange-600 {
+  fill: #ea580c;
+}
+
+.z-33 {
+  z-index: 33;
 }
 
 // backgroundcolor
@@ -135,10 +93,27 @@ a {
   background-color: #f2f2f2;
 }
 
+.bg-meta-2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 242 247 / var(--tw-bg-opacity));
+}
+
+// PADDING & MARGIN
+.px-7\.5 {
+  padding-left: 1.875rem;
+  padding-right: 1.875rem;
+}
+
 // shadow
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / .1), 0 2px 4px -2px rgb(0 0 0 / .1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-default {
+  --tw-shadow: 0px 8px 13px -3px rgba(0, 0, 0, .07);
+  --tw-shadow-colored: 0px 8px 13px -3px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
