--- a/firebase_proj/src/index.css
+++ b/firebase_proj/src/index.css
@@ -2,40 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-:root {
-  /* color-scheme: light; */
-  --in: 72.06% .191 231.6;
-  --su: 64.8% .15 160;
-  --wa: 84.71% .199 83.87;
-  --er: 71.76% .221 22.18;
-  --pc: 89.824% .06192 275.75;
-  --ac: 15.352% .0368 183.61;
-  --inc: 0% 0 0;
-  --suc: 0% 0 0;
-  --wac: 0% 0 0;
-  --erc: 0% 0 0;
-  --rounded-box: 1rem;
-  --rounded-btn: .5rem;
-  --rounded-badge: 1.9rem;
-  --animation-btn: .25s;
-  --animation-input: .2s;
-  --btn-focus-scale: .95;
-  --border-btn: 1px;
-  --tab-border: 1px;
-  --tab-radius: .5rem;
-  --p: 49.12% .3096 275.75;
-  --s: 69.71% .329 342.55;
-  --sc: 98.71% .0106 342.55;
-  --a: 76.76% .184 183.61;
-  --n: 32.1785% .02476 255.701624;
-  --nc: 89.4994% .011585 252.096176;
-  --b1: 100% 0 0;
-  --b2: 96.1151% 0 0;
-  --b3: 92.4169% .00108 197.137559;
-  --bc: 27.8078% .029596 256.847952;
-}
-
 *, :before, :after {
   --tw-ring-color: rgb(59 130 246 / .5);
   --tw-ring-offset-shadow: 0 0 #0000;
@@ -56,6 +22,9 @@ ol, ul, menu {
   padding: 0;
 }
 
+svg {
+  touch-action: none;
+}
 
 /* LOADER */
 .loading-indicator:before {
