--- a/firebase_proj/src/App.scss
+++ b/firebase_proj/src/App.scss
@@ -133,35 +133,72 @@ a {
   flex-wrap: wrap;
   font-size: .875rem;
   line-height: 1.25rem;
-  padding: .5rem
-}
+  padding: .5rem;
 
-.menu :where(li ul) {
-  position: relative;
-  white-space: nowrap;
-  margin-inline-start: 1rem;
-  padding-inline-start: .5rem
-}
+  :where(li ul) {
+    position: relative;
+    white-space: nowrap;
+    margin-inline-start: 1rem;
+    padding-inline-start: 0.5rem;
 
-.menu :where(li:not(.menu-title)>*:not(ul, details, .menu-title, .btn)),
-.menu :where(li:not(.menu-title)>details>summary:not(.menu-title)) {
-  display: grid;
-  grid-auto-flow: column;
-  align-content: flex-start;
-  align-items: center;
-  gap: .5rem;
-  grid-auto-columns: minmax(auto, max-content) auto max-content;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none
-}
+    &:before {
+      background-color: #1f2937;
+      bottom: 0.75rem;
+      content: "";
+      inset-inline-start: 0;
+      opacity: 0.1;
+      position: absolute;
+      top: 0.75rem;
+      width: 1px;
+    }
+  }
 
-.menu li.disabled {
-  cursor: not-allowed;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-  color: var(--fallback-bc, oklch(var(--bc)/.3))
+  :where(li:not(.menu-title) > *:not(ul, details, .menu-title, .btn)) {
+    display: grid;
+    grid-auto-flow: column;
+    align-content: flex-start;
+    align-items: center;
+    gap: .5rem;
+    grid-auto-columns: minmax(auto, max-content) auto max-content;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    border-radius: var(--rounded-btn, .5rem);
+    padding: .5rem 1rem;
+    text-align: start;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+    transition-timing-function: cubic-bezier(0, 0, .2, 1);
+    transition-duration: .2s;
+    text-wrap: balance;
+  }
+
+  :where(li:not(.menu-title) > details > summary:not(.menu-title)) {
+    display: grid;
+    grid-auto-flow: column;
+    align-content: flex-start;
+    align-items: center;
+    gap: .5rem;
+    grid-auto-columns: minmax(auto, max-content) auto max-content;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+
+  li.disabled {
+    cursor: not-allowed;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    color: var(--fallback-bc, oklch(var(--bc)/.3));
+  }
+
+  :where(li:not(.menu-title):not(.disabled) > *:not(ul):not(details):not(.menu-title):not(.active):hover) {
+    background-color: #1f29371a;
+    cursor: pointer;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+  }
 }
 
 :where(.menu li) {
@@ -170,60 +207,38 @@ a {
   flex-shrink: 0;
   flex-direction: column;
   flex-wrap: wrap;
-  align-items: stretch
+  align-items: stretch;
 }
 
-.menu :where(li:not(.menu-title)>*:not(ul, details, .menu-title, .btn)) {
-  display: grid;
-  grid-auto-flow: column;
-  align-content: flex-start;
-  align-items: center;
-  gap: .5rem;
-  grid-auto-columns: minmax(auto, max-content) auto max-content;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
+.drawer-side {
+  >.drawer-overlay {
+    position: sticky;
+    top: 0;
+    place-self: stretch;
+    cursor: pointer;
+    background-color: transparent;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+    transition-timing-function: cubic-bezier(0, 0, .2, 1);
+    transition-duration: .2s;
+  }
 
+  > :not(.drawer-overlay) {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+    transition-duration: .3s;
+    transition-property: -webkit-transform;
+    transition-property: transform;
+    transition-property: transform, -webkit-transform;
+    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+    transition-timing-function: cubic-bezier(0, 0, .2, 1);
+    will-change: transform;
 
-.menu :where(li:not(.menu-title)>*:not(ul, details, .menu-title, .btn)) {
-  border-radius: var(--rounded-btn, .5rem);
-  padding: .5rem 1rem;
-  text-align: start;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
-  transition-timing-function: cubic-bezier(0, 0, .2, 1);
-  transition-duration: .2s;
-  text-wrap: balance;
-}
-
-.drawer-side>.drawer-overlay {
-  position: sticky;
-  top: 0;
-  place-self: stretch;
-  cursor: pointer;
-  background-color: transparent;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
-  transition-timing-function: cubic-bezier(0, 0, .2, 1);
-  transition-duration: .2s;
-}
-
-.drawer-toggle:checked~.drawer-side>:not(.drawer-overlay) {
-  -webkit-transform: translateX(0);
-  transform: translateX(0);
-}
-
-.drawer-side>:not(.drawer-overlay) {
-  -webkit-transform: translateX(-100%);
-  transform: translateX(-100%);
-  transition-duration: .3s;
-  transition-property: -webkit-transform;
-  transition-property: transform;
-  transition-property: transform, -webkit-transform;
-  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
-  transition-timing-function: cubic-bezier(0, 0, .2, 1);
-  will-change: transform;
+    .drawer-toggle:checked~& {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+    }
+  }
 }
 
 .flex {
@@ -232,50 +247,50 @@ a {
 
 
 @media (min-width: 1024px) {
-  .lg\:drawer-open>.drawer-toggle~.drawer-side>.drawer-overlay {
-    cursor: default;
-    background-color: transparent;
-  }
+  .lg\:drawer-open {
+    >.drawer-toggle~.drawer-side>.drawer-overlay {
+      cursor: default;
+      background-color: transparent;
+    }
 
-  .lg\:drawer-open>.drawer-toggle~.drawer-side>:not(.drawer-overlay),
-  [dir=rtl] .lg\:drawer-open>.drawer-toggle~.drawer-side>:not(.drawer-overlay) {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
+    >.drawer-toggle~.drawer-side> :not(.drawer-overlay),
+    [dir=rtl] &>.drawer-toggle~.drawer-side> :not(.drawer-overlay) {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+    }
 
-.lg\:drawer-open> {
-  .drawer-side {
-    overflow-y: auto;
-  }
+    >.drawer-side {
+      overflow-y: auto;
+    }
 
-  .drawer-toggle {
-    display: none;
+    >.drawer-toggle {
+      display: none;
 
-    ~.drawer-side {
-      pointer-events: auto;
-      visibility: visible;
-      position: sticky;
-      display: block;
-      width: auto;
-      overscroll-behavior: auto;
+      ~.drawer-side {
+        pointer-events: auto;
+        visibility: visible;
+        position: sticky;
+        display: block;
+        width: auto;
+        overscroll-behavior: auto;
+      }
     }
   }
-}
 
-.drawer-side>*:not(.drawer-overlay) {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
-  transition-timing-function: cubic-bezier(0, 0, .2, 1);
-  transition-duration: .3s;
-  will-change: transform;
-  transform: translate(-100%);
-}
+  .drawer-side {
+    >*:not(.drawer-overlay) {
+      transition-property: transform;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+      transition-duration: 0.3s;
+      will-change: transform;
+      transform: translate(-100%);
+    }
+  }
 
-
-
-.lg\:hidden {
-  display: none;
-}
+  .lg\:hidden {
+    display: none;
+  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
